# escoffe

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: ConfirmDialog.svelte  DatePicker.svelte  DrawerNav.svelte  EmptyState.svelte  IngredientCard.svelte  IngredientForm.svelte  IngredientList.svelte  StatTile.svelte
src/lib/calendar/: expiration.ts
src/lib/persistence/: notify.ts  store.ts
src/lib/stats/: aggregate.ts
src/lib/stores/: ingredients.svelte.ts  pantry.svelte.ts
src/lib/types/: catalog.ts  event.ts  ingredient.ts
src/lib/utils/: fuzzy.ts
src/views/: DashboardView.svelte  PantryView.svelte  StatsView.svelte
