[package]
name = "escoffe"
version = "0.1.0"
description = "Local-first pantry & ingredient expiration tracker"
authors = ["Escoffe contributors"]
edition = "2021"
license = "MIT"

[lib]
name = "escoffe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
